--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <header class="fondo">
         <div class="texto-fondo">
-            <h1 class="texto-60">Repasando Estilos CSS</h1>
+            <h1 class="texto-60">Repasandooo Estilos CSS</h1>
             <h2 class="texto-40">Repasando diferentes formas</h2>
         </div>
     </header>
